--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "homeAutomation",
+  "name": "smartifyservices",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV = dev && node server.js",
-    "test": "mocha --timeout 10000 || true"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "suresh",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,5 +20,6 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0"
   },
-  "devDependencies": {}
+  "author": "",
+  "license": "ISC"
 }
